// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Row Action Bar 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        One Action
      </div>
    </div>
    <div
      data-css-1pe5xb7=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Long Title - Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      data-css-1pe5xb7=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Long Title with Image - Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
    </div>
    <div
      data-css-1pe5xb7=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Locked Visible
      </div>
    </div>
    <div
      data-css-7zyoug=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Combo 1`] = `
<div
  data-css-19vzw9x=""
>
  <div
    data-css-5n4uhw=""
  >
    <div
      data-css-nu4y7h=""
    >
      <span
        data-css-1bnk4mn=""
      >
        <a
          href="http://google.com?query=title"
        >
          Image, Progress, Link Full Overlay, Icon, Link Title, Link Meta1, 2, Action Bar, and More Really. Why Not Put More In? Release a New Edition Every Year With All the Excesses of our VC Budget? Boundless Features Will Be Yours 2000
        </a>
      </span>
    </div>
    <div
      data-css-1iuvoh7=""
    >
      <span
        data-css-1kcrbi9=""
      >
        <span
          data-css-1bnk4mn=""
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            It is impossible to count the grand contributions of this great author
          </a>
        </span>
      </span>
      <span
        aria-hidden={true}
        data-css-kykfz1=""
      >
        ·
      </span>
      <span
        data-css-1kcrbi9=""
      >
        <span
          data-css-1bnk4mn=""
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </a>
        </span>
      </span>
      <span
        aria-hidden={true}
        data-css-kykfz1=""
      >
        ·
      </span>
      <span
        data-css-1kcrbi9=""
      >
        <span
          data-css-1bnk4mn=""
        >
          <a
            href="http://google.com/?query=jaketrent"
          >
            A length of such amazing lengthitude so-as to blow the mind
          </a>
        </span>
      </span>
    </div>
    <div
      data-css-1iuvoh7=""
    >
      <span
        data-css-1kcrbi9=""
      >
        Goodness me!
      </span>
    </div>
  </div>
  <div
    data-css-7b22zo=""
  >
    <button
      data-css-1dnyz38=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-4ducb0=""
      >
        <div
          data-css-k31qw2=""
        >
          <svg
            aria-label="bookmark icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
    <button
      data-css-1dnyz38=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-4ducb0=""
      >
        <div
          data-css-k31qw2=""
        >
          <svg
            aria-label="gear icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              clipRule="evenodd"
              d="M4 12c0-.377.026-.748.077-1.111L2.274 9.848a.5.5 0 01-.183-.683l2.5-4.33a.5.5 0 01.683-.183l1.804 1.041A7.988 7.988 0 019 4.581V2.5a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v2.082a7.99 7.99 0 011.922 1.112l1.805-1.042a.5.5 0 01.683.183l2.5 4.33a.5.5 0 01-.183.683l-1.804 1.042a8.063 8.063 0 010 2.22l1.804 1.042a.5.5 0 01.183.683l-2.5 4.33a.5.5 0 01-.683.183l-1.805-1.042A7.992 7.992 0 0115 19.418V21.5a.5.5 0 01-.5.5h-5a.5.5 0 01-.5-.5v-2.081a7.985 7.985 0 01-1.923-1.112l-1.804 1.041a.5.5 0 01-.683-.183l-2.5-4.33a.5.5 0 01.183-.683l1.803-1.04A8.077 8.077 0 014 12zm9-8h-2v2.083a5.994 5.994 0 00-3.623 2.092L5.573 7.133l-1 1.732 1.803 1.04A5.986 5.986 0 006 12c0 .736.132 1.44.375 2.092l-1.803 1.041 1 1.732 1.804-1.041A5.993 5.993 0 0011 17.917V20h2v-2.083a5.994 5.994 0 003.625-2.094l1.805 1.042 1-1.732-1.805-1.042A5.987 5.987 0 0018 12a5.99 5.99 0 00-.375-2.093l1.804-1.042-1-1.732-1.806 1.042A5.994 5.994 0 0013 6.083V4zm-5 8a4 4 0 108 0 4 4 0 00-8 0zm4 2a2 2 0 100-4 2 2 0 000 4z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
    <button
      data-css-1dnyz38=""
      disabled={false}
      style={Object {}}
    >
      <div
        data-css-4ducb0=""
      >
        <div
          data-css-k31qw2=""
        >
          <svg
            aria-label="more icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
            />
          </svg>
        </div>
      </div>
      <span
        data-css-15b13by=""
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Row Full Overlay 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Element
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Link
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Icon Link
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Both Icon and Image Have Separate Click Targets
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Images 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        With Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        With Image And Overlay
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Linked Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Wide Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Tall Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Small Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        No Image
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        No Image, With Overlay (Not Shown)
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Metadata 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Meta with Strings
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jake Trent
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Meta With Links
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Jake Trent
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        The Longest Strings in El Mundo
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Long Strings AND Los Imagereo
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          It is impossible to count the grand contributions of this great author
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          Levels heretofore unknown in the battle for truth and knowledge
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          A length of such amazing lengthitude so-as to blow the mind
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Long Strings AND Los Imagereo
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          This string is so long, it should be illegal.This string is so long, it should be illegal.This string is so long, it should be illegal.   This string is so long, it should be illegal. 
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          This is still visible
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          And so is this
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Meta With Links
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              It is impossible to count the grand contributions of this great author
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              Levels heretofore unknown in the battle for truth and knowledge
            </a>
          </span>
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="http://google.com/?query=jaketrent"
            >
              A length of such amazing lengthitude so-as to blow the mind
            </a>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        2 Lines
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jake Trent
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          School of the Internet
        </span>
        <span
          aria-hidden={true}
          data-css-kykfz1=""
        >
          ·
        </span>
        <span
          data-css-1kcrbi9=""
        >
          Blasted Good
        </span>
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Certified GMO-free
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Progress 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-js3ti3=""
    >
      <div
        data-css-6x74ml=""
      />
    </div>
    <div
      data-css-kxulf3=""
    >
      <div
        data-css-2pesz8=""
      >
        0 progress
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-js3ti3=""
    >
      <div
        data-css-6x74ml=""
      />
      <div
        data-css-cmz505=""
      >
        <div
          aria-label="67% complete"
          data-css-6fy8id=""
        />
      </div>
    </div>
    <div
      data-css-kxulf3=""
    >
      <div
        data-css-2pesz8=""
      >
        66.6667 progress
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-js3ti3=""
    >
      <div
        data-css-6x74ml=""
      />
      <div
        data-css-cmz505=""
      >
        <div
          aria-label="100% complete"
          data-css-1gebpgk=""
        />
      </div>
    </div>
    <div
      data-css-kxulf3=""
    >
      <div
        data-css-2pesz8=""
      >
        100 progress
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-2pesz8=""
      >
        No image, with progress (not shown)
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Sizes 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
      "maxWidth": "50vw",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        small Row
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        small With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-js3ti3=""
    >
      <div
        data-css-6x74ml=""
      />
    </div>
    <div
      data-css-kxulf3=""
    >
      <div
        data-css-2pesz8=""
      >
        medium Row
      </div>
      <div
        data-css-1f22p8h=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-js3ti3=""
    >
      <div
        data-css-6x74ml=""
      />
    </div>
    <div
      data-css-kxulf3=""
    >
      <div
        data-css-2pesz8=""
      >
        medium With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
      </div>
      <div
        data-css-1f22p8h=""
      >
        <span
          data-css-1kcrbi9=""
        >
          Jim Cooper
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Stack Of Rows 1`] = `
Array [
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Course thing you do
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          1m 46s
        </span>
      </div>
    </div>
    <div
      data-css-7zyoug=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>,
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        Course thing you do
      </div>
      <div
        data-css-1iuvoh7=""
      >
        <span
          data-css-1kcrbi9=""
        >
          1m 46s
        </span>
      </div>
    </div>
    <div
      data-css-7zyoug=""
    >
      <button
        data-css-1dnyz38=""
        disabled={false}
        style={Object {}}
      >
        <div
          data-css-4ducb0=""
        >
          <div
            data-css-k31qw2=""
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-15b13by=""
        />
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Components/Row Titles 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr",
      "justifyItems": "left",
    }
  }
>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        A String Title
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <div
      data-css-19vzw9x=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-nu4y7h=""
        >
          <div>
            String trucated - We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-css-19vzw9x=""
  >
    <div
      data-css-1tiyrld=""
    >
      <div
        data-css-nu4y7h=""
      >
        <span
          data-css-1bnk4mn=""
        >
          <a
            href="http://google.com"
          >
            A Link Title
          </a>
        </span>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "maxWidth": 400,
      }
    }
  >
    <div
      data-css-19vzw9x=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-nu4y7h=""
        >
          <span
            data-css-1bnk4mn=""
          >
            <a
              href="http://google.com"
            >
              <div>
                Link truncated - We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
              </div>
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
